--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -22,6 +22,20 @@ jobs:
         with:
           node-version: "22"
 
+      - name: Install libusb + build tooling (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libusb-1.0-0-dev \
+            pkg-config \
+            build-essential
+
+      - name: Install libusb + pkg-config (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          brew install libusb pkg-config
+
       - name: Install dependencies
         working-directory: firmware/installer
         run: npm install
