--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -28,6 +28,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             libusb-1.0-0-dev \
+            libudev-dev \
             pkg-config \
             build-essential
 
