--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -38,7 +38,9 @@ jobs:
 
       - name: Install dependencies
         working-directory: firmware/installer
-        run: npm ci
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Build Vite app
         working-directory: firmware/installer
